# kinfu_dyna

./: CMakeLists.txt  allserver.py  capKinect.py  capRealsense.py  getlog.py  gettestdata.py  pack.sh  piliang.py  run.py  testServer.py  testServerLocal.py
apps/: CMakeLists.txt  CWebsocketServer.cpp  CWebsocketServer.hpp  demo.cpp  private_key.pem  public_key.pem  server_rsa.pub
kfusion/: CMakeLists.txt
kfusion/include/io/: CWebsocketServer.hpp  ply.hpp  saveply.hpp
kfusion/include/kfusion/: ceres_graph.hpp  circular_motion_constraint.hpp  edge_circular_motion.hpp  human_detection.hpp  kinfu.hpp  loop_closure_solver.hpp  marchingcubes.hpp  optimisation.hpp  types.hpp  warp_field.hpp
kfusion/include/kfusion/cuda/: tsdf_volume.hpp
kfusion/include/kfusion/utils/: dual_quaternion.hpp
kfusion/src/: CWebsocketServer.cpp  ceres_graph.cpp  human_detection.cpp  imgproc.cpp  internal.hpp  kinfu.cpp  loop_closure_solver.cpp  marchingcubes.cpp  precomp.cpp  projective_icp.cpp  tsdf_volume.cpp  warp_field.cpp
kfusion/src/cuda/: device.hpp  imgproc.cu  marchingcubes.cu  proj_icp.cu  temp_utils.hpp  tsdf_volume.cu
rectifyNet/: checkrelation.py  estimate_body.py  predict.py  predictFC.py  predictOnlyMeasure.py  predictPointNet.py  preparedata.py  rectifier.py
rectifyNet/data/: getdata.sh  weights.txt
scripts/: consts.py  cpcode.sh  depth2pt.py  markbody.py  pose.py  post_model.py  test_query.py  txt2pts.py
